fixed origin phase table with global horizontal scroll css, DONT FORGET TO CHANGE ENVIRONMENT FILE BACK

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import './app/shared/css/contour-overlay.scss';
-@import './app/shared/css/description-table.scss';
-@import './app/shared/css/mmi-colors.scss';
-@import './app/shared/css/station-overlay.scss';
+@import "./app/shared/css/contour-overlay.scss";
+@import "./app/shared/css/description-table.scss";
+@import "./app/shared/css/horizontal-scrolling.scss";
+@import "./app/shared/css/mmi-colors.scss";
+@import "./app/shared/css/station-overlay.scss";
 
 /* Leaflet Styles */
-@import './app/shared/css/leaflet-styles.scss'; // import before legend-control.scss
-@import './app/shared/map-control/legend-control.scss';
+@import "./app/shared/css/leaflet-styles.scss"; // import before legend-control.scss
+@import "./app/shared/map-control/legend-control.scss";
 
 /* Material Design Component Styles */
 a.mdc-tab,
@@ -35,7 +36,7 @@ mdc-tab-bar.mdc-tab-bar {
 }
 
 mdc-tab-bar-scroller.mdc-tab-bar-scroller {
-  border-bottom: 1px solid rgba(0,0,0,0.12);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
 
 @import "~@angular-mdc/theme/material";
